# BuildMetaInfo

./: CMakeLists.txt  README.md  build_meta_info.py
include/: BuildMetaInfo.h
src/: BuildMetaInfo.cpp
